Chenges in buil.gradel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CheckOut</string>
     <string name="title_activity_check_out">Map</string>
+    <string name="check_out">Check Out</string>
 </resources>
